<resources>

    <string name="app_name">SaveMeApp</string>

    <string name="nameField"> Key (ex. phone) </string>
    <string name="phoneField"> Value (ex. 3934049345)</string>

    <string name="insertButton"> Save\nItem </string>
    <string name="readButton"> Get\nRow </string>
    <string name="deleteButton"> Start\nOver </string>
    <string name="returnButton"> Return </string>

    <string name="generateQr">Generate QR</string>
    <string name="updateTable">Update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="savemelogo">TODO</string>
</resources>
